--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 sync --delete build/ s3://saferide-auth-client",
+    "prod": "npm run build && npm run deploy" 
   },
   "eslintConfig": {
     "extends": [
