--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -18,6 +18,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+      - name: 'Create env file'
+        run: |
+          touch .env
+          echo REACT_APP_BASE_API_URL=${{ secrets.REACT_APP_BASE_API_URL }} >> .env
+          cat .env
       - name: Installing dependencies
         run: npm install
       - name: Building project
